# quiz-relay

./: .env.example  .gitignore  .prompt.example  AGENTS.md  Makefile  README.md  config.example.toml  pyproject.toml  spec.md
docs/: esp32_protocol.md  gnome_shortcut.md  http_relay.md
prompts/: istqb.md  multiplechoice.md  togaf.md
src/quiz_relay/: ai.py  app.py  capture.py  cli.py  config.py  core.py  debug.py  errors.py  models.py  mouse.py  relay.py  runner.py  runtime_log.py  service.py  solution.py  uploads.py  web.py
src/quiz_relay/ai/: ai_solver_client.py  models.py  prompt_builder.py  providers.py  response_parser.py  solution_validator.py
src/quiz_relay/audit/: run_logger.py
src/quiz_relay/esp32/: esp32_client.py  models.py  payload_builder.py
src/quiz_relay/pipeline/: locking.py  result_models.py  run_context.py  solve_pipeline.py
src/quiz_relay/relays/: __init__.py  base.py  http.py  keyboard_led.py
src/quiz_relay/screenshot/: backends.py  monitor_models.py  screenshot_service.py  screenshot_store.py
src/quiz_relay/triggers/: mouse_listener.py
tests/: test_cli.py  test_config.py  test_http_relay_client.py  test_mouse_listener.py  test_payload_builder.py  test_response_parser.py  test_runner.py  test_solution_validator.py  test_solve_pipeline.py
udev/: 99-quiz-relay-leds.rules
