[project]
name = "quiz-relay"
version = "0.1.0"
description = "Local screenshot quiz solver with AI analysis and ESP32 relay"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "mss",
    "openai",
    "pynput",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
quiz-relay = "quiz_relay.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
